# slack_api

./: .env.example  .gitignore  AGENTS.md  EXAMPLES.md  README.md  app.js  package.json  pyproject.toml  test.js
slack_digest_bot/app/: logging_config.py  main.py  settings.py
slack_digest_bot/digest/: delivery.py  llm_digest.py  preprocess.py  renderer.py  scheduler.py
slack_digest_bot/integrations/: base.py  google_calendar.py  jira.py
slack_digest_bot/nl/: prompts.py  router.py  tool_schemas.py
slack_digest_bot/slack/: bolt_app.py  handlers_dm.py  handlers_events.py  slack_client.py
slack_digest_bot/storage/: db.py  models.py  repo.py
tests/: test_nl_router.py  test_preprocess.py  test_repo.py
